bit_roles_tests/tests/compile_fail/invalid_variant_rhs.stderr
error: [`Two`]: `5` is neither zero nor a power of two
 --> tests/compile_fail/invalid_variant_rhs.rs:4:17
  |
4 | #[derive(Debug, BitRole, Copy, Clone)]
  |                 ^^^^^^^
  |
  = note: this error originates in the derive macro `BitRole` (in Nightly builds, run with -Z macro-backtrace for more info)

error: `Two` in the `RoleTwo` enum must have a literal RHS expression
  --> tests/compile_fail/invalid_variant_rhs.rs:11:17
   |
11 | #[derive(Debug, BitRole, Copy, Clone)]
   |                 ^^^^^^^
   |
   = note: this error originates in the derive macro `BitRole` (in Nightly builds, run with -Z macro-backtrace for more info)
